tests/fixtures/invalid/str_rshift_float.py
# Cannot right shift Str and Float
x: float = "hello" >> 1.0
